src/pages/index.scss
/**
 * index.scss
 */

@import '../styles/globals';

* {
  box-sizing: border-box;
}

.page {
  display: flex;
  flex-direction: column;
}

/*
 * Messages
 */

@keyframes messageFadeIn {
  0% {
    opacity: 0;
    transform: translateY(10px) scale(0.99);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.messages__container {
  height: 280px;
  margin: 0 auto;
  position: relative;
  top: -24px;
}

.messages__avatar-title {
  color: #fff;
  font-size: 11px;
  left: 12px;
  opacity: 0.6;
  position: absolute;
  top: -20px;
}

.messages__avatar {
  background-repeat: no-repeat;
  border-radius: 100%;
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.3);
  height: 30px;
  left: -44px;
  position: absolute;
  top: 0;
  width: 30px;

  @include resolution(2) {
    background-size: 30px 30px;
  }
}

.messages__avatar--junwon {
  background-image: url('../layouts/images/avatar-junwon.png');

  @include resolution(2) {
    background-image: url('../layouts/images/avatar-junwon@2x.png');
  }
}

.messages__avatar--asl {
  background-image: url('../layouts/images/avatar-andrew.png');

  @include resolution(2) {
    background-image: url('../layouts/images/avatar-andrew@2x.png');
  }
}

.messages__avatar--tucker {
  background-image: url('../layouts/images/avatar-tucker.png');

  @include resolution(2) {
    background-image: url('../layouts/images/avatar-tucker@2x.png');
  }
}

.messages__avatar--joseph {
  background-image: url('../layouts/images/avatar-joseph.png');

  @include resolution(2) {
    background-image: url('../layouts/images/avatar-joseph@2x.png');
  }
}

.messages__avatar--roma {
  background-image: url('../layouts/images/avatar-roma.png');

  @include resolution(2) {
    background-image: url('../layouts/images/avatar-roma@2x.png');
  }
}

.messages__avatar--john {
  background-image: url('../layouts/images/avatar-john.png');

  @include resolution(2) {
    background-image: url('../layouts/images/avatar-john@2x.png');
  }
}

.messages__avatar--prasad {
  background-image: url('../layouts/images/avatar-prasad.png');

  @include resolution(2) {
    background-image: url('../layouts/images/avatar-prasad@2x.png');
  }
}

.messages__avatar--shubhang {
  background-image: url('../layouts/images/avatar-shubhang.png');

  @include resolution(2) {
    background-image: url('../layouts/images/avatar-shubhang@2x.png');
  }
}

.messages__avatar--andrewlesh {
  background-image: url('../layouts/images/avatar-andrewlesh.png');

  @include resolution(2) {
    background-image: url('../layouts/images/avatar-andrewlesh@2x.png');
  }
}

.messages__avatar--dylan {
  background-image: url('../layouts/images/avatar-dylan.png');

  @include resolution(2) {
    background-image: url('../layouts/images/avatar-dylan@2x.png');
  }
}

.messages__message {
  background-color: #1d1d1d;
  border-radius: 8px;
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.3);
  color: #fff;
  margin: 0 auto;
  max-width: 280px;
  position: relative;

  animation-name: messageFadeIn;
  animation-duration: 500ms;
  animation-timing-function: ease;
  animation-fill-mode: backwards;

  @include for-tablet-portrait-up {
    max-width: 340px;
  }
}

.messages__message p {
  font-size: 14px;
  line-height: 19px;
  margin: 0 0 8px;
  padding: 12px 16px;
}

.messages__message-1 {
  animation-delay: 400ms;
}

.messages__message-2 {
  margin-bottom: 8px;
  animation-delay: 1200ms;
}

.messages__message-3 {
  animation-delay: 2000ms;
}

.messages__message-combo {
  background-color: #fff;
  border: solid 1px #d4d4d4;
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.15);
  display: block;
  width: 270px;

  transition: opacity 100ms ease;
}

.messages__message-combo hr {
  background: #d4d4d4;
  border: 0;
  display: block;
  height: 1px;
  margin: 0;
  width: 100%;
}

.messages__message-combo a {
  color: #1d1d1d;
  border-radius: 5px;
  display: block;
  padding: 12px 0 10px;
  position: relative;
  overflow: hidden;
  text-decoration: none;
  
  transition: opacity 100ms ease;
}

.messages__message-combo a:hover {
  background: #fafafa;
  opacity: 0.7;
}

.messages__message-combo h3 {
  font-size: 16px;
  margin: 0 0 0 64px;
}

.messages__message-combo p {
  margin: 0 0 0 64px;
  padding: 0;
  opacity: 0.7;
}

// .messages__message-slack h3::before, {
//   background: url('../layouts/images/icon-slack.svg') no-repeat;
//   background-size: 24px 24px;
//   content: '';
//   display: block;
//   height: 24px;
//   position: absolute;
//   left: 20px;
//   top: 18px;
//   width: 24px;

//   transition: transform 800ms ease;
// }

.messages__message-survey h3::before {
  background: url('../layouts/images/icon-file-plus.svg') no-repeat;
}

.messages__message-facebook h3::before {
  background: url('../layouts/images/icon-facebook-blue.svg') no-repeat;
}

.messages__message-survey h3::before,
.messages__message-facebook h3::before {
  background-size: 22px 22px;
  content: '';
  display: block;
  position: absolute;
  opacity: 0.7;

  height: 22px;
  left: 20px;
  top: 18px;
  width: 22px;

  transition: transform 200ms ease;
}

.messages__message-slack:hover h3::before,
.messages__message-survey:hover h3::before,
.messages__message-facebook:hover h3::before {
  transform: rotate(20deg);
}

/*
 * Content
 */

.content__container {
  flex: 1;
  margin-bottom: 24px;

  @include for-tablet-landscape-up {
    margin-bottom: 48px;
  }
}

.content__divider {
  background: #eee;
  border: 0;
  height: 1px;
  margin: 24px auto 48px;
  width: 100%;
}

/*
 * Bullets
 */

.bullets__container {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-bottom: 24px;

  @include for-tablet-landscape-up {
    flex-direction: row;
  }
}

.bullets__bullet {
  display: flex;
  margin-bottom: 32px;

  @include for-tablet-landscape-up {
    margin: 0 24px;
  }
}

.bullets__bullet-content {
  display: flex;
  flex-direction: column;
}

.bullets__bullet-icon {
  align-self: center;
  align-items: center;
  background-image: linear-gradient(-236deg, #E33535 0%, #CF2B6E 100%);
  box-shadow: 0 1px 6px 0 rgba(0,0,0,0.20);
  border-radius: 100%;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  height: 60px;
  margin-right: 20px;
  position: relative;
  width: 60px;
}

.bullets__bullet-icon::after {
  display: block;
  content: '';
}

.bullets__bullet-projects .bullets__bullet-icon::after {
  background: url('../layouts/images/icon-projects.svg') no-repeat;
  background-size: 22px 22px;
  height: 22px;
  width: 22px;
}

.bullets__bullet-speakers .bullets__bullet-icon::after {
  background: url('../layouts/images/icon-speakers.svg') no-repeat;
  background-size: 20px 20px;
  height: 20px;
  width: 20px;
}

.bullets__bullet-tutorials .bullets__bullet-icon::after {
  background: url('../layouts/images/icon-tutorials.svg') no-repeat;
  background-size: 20px 20px;
  height: 20px;
  width: 20px;
}

.bullets__bullet h3 {
  font-size: 18px;
  margin: 0 0 4px;
}

.bullets__bullet p {
  font-size: 14px;
  line-height: 16px;
  opacity: 0.7;
  margin: 0;
  max-width: 260px;
}

